Fix gameDisplay and gameInfo sytling: overflow on review boxes, better headers, fixed add/remove button issues

--- a/src/scss/3-containers/_searchFields.scss
+++ b/src/scss/3-containers/_searchFields.scss
@@ -49,6 +49,14 @@
   width: 100%;
 }
 
+#searchButtonContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 110px;
+}
+
 #titleDescriptionSearch {
   font-size: 16pt;
   margin: 10px 10px 10px 10px;
